<resources>
    <string name="sub_client_id_default">SarathiAppSettingsSubscriber</string>
    <string name="sub_subscription_topic_default">/SarathiAppSettings</string>
    <string name="sub_server_id_default">tcp://iot.eclipse.org:1883</string>

    <string name="pub_client_id_default">SarathiAppMetadataPublisher</string>
    <string name="pub_subscription_topic_default">/SarathiAppMetadataPublisher</string>
    <string name="pub_server_id_default">tcp://iot.eclipse.org:1883</string>

    <string name="app_name">Sarathi</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabbed">Sarathi</string>
    <string name="sub_server_uri">Subscriber Server URI</string>
    <string name="sub_client_id">Subscriber Client ID</string>
    <string name="sub_subscription_topic">Subscription topic</string>
    <string name="pub_server_uri">Publisher Server URI</string>
    <string name="pub_client_id">Publisher Client ID</string>
    <string name="pub_subscription_topic">Publisher topic</string>
    <string name="reconnect_label">Reconnect</string>
    <string name="publish_test_msg">Publish config msg</string>
    <string name="app_list">App list</string>
    <string name="settings">Settings</string>
    <string name="observer">Observer</string>
    <string name="observer_button">Publish metadata through service</string>

</resources>
